--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -24,7 +24,9 @@
     "axios": "^1.7.7",
     "cloudinary": "^1.41.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.13",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
