--- a/Reminder-System/src/main/resources/application.properties.example
+++ b/Reminder-System/src/main/resources/application.properties.example
@@ -2,13 +2,8 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 server.port=8081
 
-# Mail configuration (configure with your SMTP)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+# SendGrid configuration
+sendgrid.api.key=${SENDGRID_API_KEY:your-sendgrid-api-key-here}
 server.servlet.context-path=/
 
 app.mail.from=
