--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -25,7 +25,7 @@
     "cloudinary": "^1.41.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.13",
+    "@sendgrid/mail": "^8.1.3",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
